<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/nav_course"
        android:name="com.example.myapplication.ui.run.RunFragment"
        android:label="Course"
        tools:layout="@layout/fragment_run" />
    <fragment
        android:id="@+id/nav_history_course"
        android:name="com.example.myapplication.ui.run.RunHistoryFragment"
        android:label="Historique Course"
        tools:layout="@layout/fragment_run_history" />

    <activity
        android:id="@+id/nav_motivation"
        android:name="com.example.myapplication.view.MotivationActivity"
        android:label="Motivation Audio"
        tools:layout="@layout/activity_motivation" />

    <fragment
        android:id="@+id/nav_sleep"
        android:name="com.example.myapplication.ui.sleep.SleepFragment"
        android:label="Sleep Tracker"
        tools:layout="@layout/fragment_sleep" />

    <fragment
        android:id="@+id/nav_activity"
        android:name="com.example.myapplication.ui.activity.ActivityFragment"
        android:label="Activity Tracker"
        tools:layout="@layout/fragment_activity" />

</navigation>